--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
 </head>
 <body>
     <div class="calculator">
-        <div id="screen"></div>
+        <div id="screen">
+            <div id="currentScreen"></div>
+        </div>
         <div id="calcButtons">
-            <button class="eraseButtons">CLEAR</button>
+            <button class="eraseButtons" onclick="clear()">CLEAR</button> 
             <button class="eraseButtons">DELETE</button>   
-            <button class="button">7</button>
-            <button class="button">8</button>
-            <button class="button">9</button>
+            <button class="button" onclick="display(7)">7</button>
+            <button class="button" onclick="display(8)">8</button>
+            <button class="button" onclick="display(9)">9</button>
             <button class="button">÷</button>
-            <button class="button">4</button>
-            <button class="button">5</button>
-            <button class="button">6</button>
+            <button class="button" onclick="display(4)">4</button>
+            <button class="button" onclick="display(5)">5</button>
+            <button class="button" onclick="display(6)">6</button>
             <button class="button">x</button>
-            <button class="button">1</button>
-            <button class="button">2</button>
-            <button class="button">3</button>
+            <button class="button" onclick="display(1)">1</button>
+            <button class="button" onclick="display(2)">2</button>
+            <button class="button" onclick="display(3)">3</button>
             <button class="button">-</button>
             <button class="button">.</button>
-            <button class="button">0</button>
+            <button class="button" onclick="display(0)">0</button>
             <button class="button">=</button>
             <button class="button">+</button>           
         </div>
