Change ids to class

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="calculator">
-        <div id="screen">
-            <div data-history id="historyScreen"></div>
-            <div data-current id="currentScreen"></div>
+        <div class="screen">
+            <div data-history class="historyScreen"></div>
+            <div data-current class="currentScreen"></div>
         </div>
         <div id="calcButtons">
             <button data-clear class="eraseButtons">CLEAR</button> 
